--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <script src="./js/export/export.js" type="module"></script>
     <script src="./js/options.js"></script>
     <svg id="canvas" height="4000" width="4000" xmlns="http://www.w3.org/2000/svg">
+
     </svg>
     <button id="" class="main" onclick="showOptions('options');">Show Options</button>
     <div id="options" onmouseleave="hideOptions('options');">  
-        <button id="exportmap" class="button" href="" onclick="saveMap();">Exporter la carte en SVG</button>
+        <button id="exportmap" class="button" href="" onclick="showEditor('options', 'st-list');">Exporter la carte en SVG</button>
         <button id="" onclick="showEditor('options', 'st-list');" class="button" href="">Editer une Station</button>
         <button id="" onclick="hideOptions('options');" class="button" href="">Editer une Ligne</button>
         <button id="" onclick="hideOptions('options');" class="button" href="">Paramètres</button>
         <button id="" onclick="hideOptions('options');" class="button" href="">Quitter</button>
     </div>
-    <section id="st-list" onmouseenter="stationsList(net);">
+    <section id="st-list" onmouseenter="">
         <h1 class="main-title">Liste des station</h1>
         <button class="return" onclick="hideOptions('st-list');"> <span class="return-obj"> < </span> Retour </button>
     </section>
